--- a/src/templates/post-detail.html
+++ b/src/templates/post-detail.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>template </title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block head_title %}{{ instance.title}} | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
 	<h1>{{ instance.title }} </h1>
 
 	{{ instance.content }}<br>
 	{{ instance.timestamp }}<br>
 	{{ instance.id }} <br>
-
-</body>
-</html>
+{% endblock content %}
