--- a/src/templates/post-form.html
+++ b/src/templates/post-form.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Form</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
 	<form method='POST' action=""> {% csrf_token %}
 		{{ form.as_p }}
 		<input type="submit" value='create post'>
 	</form>
-</body>
-</html>
+{% endblock content %}
