--- a/src/templates/post-detail.html
+++ b/src/templates/post-detail.html
@@ -3,9 +3,8 @@
 {% block head_title %}{{ instance.title}} | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
-	<h1>{{ instance.title }} </h1>
-
-	{{ instance.content }}<br>
-	{{ instance.timestamp }}<br>
-	{{ instance.id }} <br>
+<div class='col-sm-6 col-sm-offset-3'>
+	<h1>{{ instance.title }} <small>{{ instance.timestamp }}</small></h1>
+	{{ instance.content|linebreaks }}<br>
+</div>
 {% endblock content %}
