--- a/src/templates/post-form.html
+++ b/src/templates/post-form.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="'col-sm-6 col-sm-offset-3'">
 	<form method='POST' action=""> {% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" value='create post'>
+		<input type="submit" class="btn btn-default" value='create post'>
 	</form>
+</div>
 {% endblock content %}
