--- a/src/templates/post-list.html
+++ b/src/templates/post-list.html
@@ -1,12 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>{{ title }} is working! </h1>
-	{% for obj in object_list %}
-		{% url "posts:detail" id=obj.id %}
-		<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br>
-		{{ obj.content }}<br>
-		{{ obj.timestamp }}<br>
-		{{ obj.id }} <br>
-	{% endfor %}
+	<div class='col-sm-6 col-sm-offset-3'>
+	<h1>{{ title }}</h1>
+	<div class="row">
+		{% for obj in object_list %}
+			<div class="col-sm-12">
+				<div class="thumbnail">
+					<div class="caption">
+						<h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>  {{ obj.timestamp|timesince }} ago</small></h3><br>
+						<p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+						<p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+					</div>
+				</div>
+				<hr/>
+			</div>
+		{% endfor %}
+		</div>
+	</div>
 {% endblock content%}
